Fixing issue where a tweet was basically invisible in the terminal theme

--- a/resources/terminal.css
+++ b/resources/terminal.css
@@ -55,7 +55,7 @@ a:hover {
 
 .tweet {
     clear: both;
-    color: #000000;
+    color: #ffffff;
 }
 
 .upload {
